--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!.. Nama : Juli Arsi Sabrina
+    NIM : 10122303
+    Kelas : IF-8 ..>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
